# meow

./: .gitignore  README.md  pyproject.toml  requirements.txt
meowcli/: config.json
src/meowcli/: __init__.py  handler.py  main.py  q2q.py  tools.py
